import java.util.ArrayList;

public class Knockout extends Tournament {

    public Knockout(String name,ArrayList<Team> teams) {
        super(name,teams);

    }


    @Override
    public void runTournament() {

    }
}
